fix: little more spacing for responsive resume

--- a/src/App.css
+++ b/src/App.css
@@ -54,4 +54,8 @@
   #resume-name {
     text-align: center;
   }
+
+  #resume-content {
+    padding-bottom: 32px;
+  }
 }
